--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -338,11 +338,11 @@ article {
   margin-left: 30px;
 }
 
-.products-details {
+/* .products-details {
   width: 280px;
   height: 200px;
   margin-left: 40px;
-}
+} */
 
 .search-results {
   border-bottom: 1px solid white;
@@ -380,3 +380,20 @@ article {
   border: 1px solid white;
   padding: 7px;
 }
+
+.products-details img {
+  margin-left: 70px;
+  margin-bottom: 10px;
+  height: 200px;
+  width: 200px;
+}
+
+.border-bottom {
+  margin-top: 30px;
+}
+
+.mob-flex {
+  display: flex;
+  flex-direction: column;
+}
+
