--- a/stylesheets/tablet.css
+++ b/stylesheets/tablet.css
@@ -169,3 +169,15 @@
 .mar-top {
   margin-top: 10px;
 }
+
+.mob-flex {
+  display: grid;
+  grid-template-columns: 150px 240px;
+  grid-column-gap: 10px;
+}
+
+.plus-icon i {
+  margin-left: 40px;
+  border: 1px solid white;
+  padding: 7px;
+}
